# GenAI-MovieFinder

./: Dockerfile  pyproject.toml
