[tool.poetry]
name = "genai-rag-semantic-movies"
version = "0.0.0"
description = "Semantic Search over Movies DB (GenAI) (RAG)"
authors = ["Supreeth Kunder <kundersupreeth@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pymongo = {extras = ["srv"], version = "^4.8.0"}
pydantic-settings = "^2.4.0"
pydantic = {extras = ["all"], version = "^2.8.2"}
fastapi = {extras = ["all"], version = "^0.112.0"}
redis = "^5.0.8"
pytest = {extras = ["all"], version = "^8.1.1"}
pre-commit = "^3.8.0"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"
ruff = "^0.6.0"
bandit = "^1.7.9"
tox = "^4.18.0"
coloredlogs = "^15.0.1"
wemake-python-styleguide = "^0.19.2"
black = "^24.8.0"
flake8 = {extras = ["all"], version = "^7.1.1"}
mypy = "^1.11.1"
isort = "^5.13.2"
pendulum = "^3.0.0"
coverage = {extras = ["all"], version = "^7.6.1"}
pytest-alembic = "~0.11.1"
pytest-asyncio = "~0.23.8"
pytest-clarity = "~1.0.1"
pytest-cov = "~5.0.0"
pytest-mock = "~3.14.0"
pytest-randomly = "~3.15.0"
pytest-sugar = "~1.0.0"

[tool.poetry.scripts]
api = "src.cli:run"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
